--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,4 +3,4 @@ theme:
     name: material
 nav:
   - Home: index.md
-  - Arch Linux Installation: arch  
+  - Arch Linux Installation: arch/touch.md  
